k8s/10ingress.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: betterdev
  namespace: opty
spec:
  selector:
    app: betterdev
  ports:
    - protocol: TCP
      port: 80
      name: web
      targetPort: 1605

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bd-ingress
  namespace: opty
spec:
  rules:
  - host: betterdev.link
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: betterdev
            port:
              name: web
  - host: www.betterdev.link
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: betterdev
            port:
              name: web
  - host: open.betterdev.link
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: betterdev
            port:
              name: web
